fixed jar compiler